making manhattan plot an s3 generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,9 @@ S3method(filter_variants,GWASFormatter)
 S3method(find_nearest_gene,GWASFormatter)
 S3method(find_nearest_gene,data.frame)
 S3method(find_nearest_gene,tbl_df)
+S3method(manhattan,GWASFormatter)
+S3method(manhattan,data.frame)
+S3method(manhattan,tbl_df)
 S3method(select_top_hits,GWASFormatter)
 S3method(select_top_hits,data.frame)
 export("%>%")
@@ -29,7 +32,6 @@ export(db_connect)
 export(exclude_difficult_regions)
 export(filter_variants)
 export(find_nearest_gene)
-export(manhattan)
 export(qqunif_plot)
 export(qqunif_plot_save)
 export(query_ot_api_variants)
