--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(db_connect)
 export(exclude_difficult_regions)
 export(filter_variants)
 export(find_nearest_gene)
+export(manhattan)
 export(qqunif_plot)
 export(qqunif_plot_save)
 export(query_ot_api_variants)
