--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,11 +18,16 @@ S3method(filter_variants,GWASFormatter)
 S3method(find_nearest_gene,GWASFormatter)
 S3method(find_nearest_gene,data.frame)
 S3method(find_nearest_gene,tbl_df)
+S3method(locuszoom,GWASFormatter)
+S3method(locuszoom,data.frame)
 S3method(manhattan,GWASFormatter)
 S3method(manhattan,data.frame)
 S3method(manhattan,tbl_df)
 S3method(select_top_hits,GWASFormatter)
 S3method(select_top_hits,data.frame)
+S3method(volcano,GWASFormatter)
+S3method(volcano,data.frame)
+S3method(volcano,tbl_df)
 export("%>%")
 export(annotate_with_centromere)
 export(annotate_with_chip_genes)
@@ -32,13 +37,18 @@ export(db_connect)
 export(exclude_difficult_regions)
 export(filter_variants)
 export(find_nearest_gene)
+export(get_biosample_for_accession)
+export(get_encode_biosamples)
+export(locuszoom)
 export(manhattan)
-export(qqunif_plot)
-export(qqunif_plot_save)
+export(qqplot)
+export(query_encode_ccres)
 export(query_ot_api_variants)
 export(reformat_names)
 export(reformat_summary_statistics)
+export(search_cell_types)
 export(select_top_hits)
+export(volcano)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
