add VEP annotation functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(volcano,GWASFormatter)
 S3method(volcano,data.frame)
 S3method(volcano,tbl_df)
 export("%>%")
+export(annotate_variants_ensembl)
 export(annotate_with_centromere)
 export(annotate_with_chip_genes)
 export(annotate_with_immunoglobulin)
@@ -43,6 +44,7 @@ export(locuszoom)
 export(manhattan)
 export(qqplot)
 export(query_encode_ccres)
+export(query_ot_api_v2g)
 export(query_ot_api_variants)
 export(reformat_names)
 export(reformat_summary_statistics)
