update URLs to reflect the correct repository ownership

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,5 +41,5 @@ LinkingTo:
     Rcpp
 Depends: 
     R (>= 3.5)
-URL: https://github.com/weinstockj/gwasplot, https://weinstockj.github.io/gwasplot/
-BugReports: https://github.com/weinstockj/gwasplot/issues
+URL: https://github.com/weinstocklab/gwasplot, https://weinstocklab.github.io/gwasplot/
+BugReports: https://github.com/weinstocklab/gwasplot/issues
